# labRemote

./: .gitignore  .gitlab-ci.yml  .gitmodules  .syntastic_cpp_config  CMakeLists.txt  HVSystest.csv  HV_ADCread.csv  Makefile  README  README.md  calibrate_test.txt  keithley_test.cpp  pbv2_tester.cpp
cmake/: FindLibFTDI1.cmake  Findgclib.cmake  Findlibmpsse.cmake
gui/WaferProberGUI/: README.md  WaferProbeGUI.pro  backend.cpp  backend.h  height_table.txt  main.qml  qml.qrc  qtquickcontrols2.conf  real_chip_table.txt  settings.js
gui/WaferProberGUI/qml/: ICamera.qml  Measurement.qml  Motion.qml  Page1.qml  Yarr.qml
gui/WaferProberGUI/src/: CVCamera.cpp  CVCamera.h  CalibrateZ.cpp  CalibrateZ.h  CameraThread.cpp  FileIO.cpp  FileIO.h  ObjectDetection.cpp  ObjectDetection.h  RealChipTable.cpp  RealChipTable.h  backend.cpp  backend.h  calibratez.cpp  calibratez.h  chipvideofilter.cpp  (+5 more)
image_process/: README.md  environment.yml
image_process/jupyter/: SIFT Wafer.ipynb  SIFT.ipynb  Segmentation.ipynb  Template Matching Wafer.ipynb  Template Matching.ipynb
include/: AMAC.h  AgilentPs.h  Bk85xx.h  I2CCom.h  Logger.h  MojoCom.h  SerialCom.h
src/: AMAC.cpp  AgilentPs.cpp  CMakeLists.txt  Keithley24XX.cpp  MojoCom.cpp  SerialCom.cpp
src/examples/: CMakeLists.txt  agilentRigolLike_example.cpp  fluke_test.cpp  keithley_test.cpp  pixel_scope_run.cpp  rigol_example.cpp  rigol_measure.cpp  scope_test.cpp  test_tek.cpp
src/libCom/: CMakeLists.txt  SerialCom.cpp
src/libDevCom/: AD5160.cpp  AD5160.h  AD799X.cpp  AD799X.h  ADCDevice.cpp  ADCDevice.h  AMAC.cpp  AMAC.h  AMAC_calibrate.cpp  AMAC_calibrate.h  AMAC_icalibrate.cpp  AMAC_icalibrate.h  BME280.cpp  BME280.h  CMakeLists.txt  ClimateSensor.cpp  ClimateSensor.h  ComException.h  ComIOException.cpp  ComIOException.h  DAC5574.cpp  DAC5574.h  DACDevice.cpp  DACDevice.h  DeviceCalibration.cpp  DeviceCalibration.h  DeviceCom.cpp  DeviceCom.h  DigitalIO.cpp  DigitalIO.h  DummyCalibration.cpp  DummyCalibration.h  EndeavourCom.cpp  EndeavourCom.h  EndeavourRaw.cpp  EndeavourRaw.h  FileCalibration.cpp  FileCalibration.h  FreqMeas.cpp  FreqMeas.h  (+36 more)
src/libDevCom/examples/: CMakeLists.txt  tempsensor_monitor.cpp
src/libGPIB/: AMAC.cpp  AgilentPs.cpp  Bk85xx.cpp  CMakeLists.txt  FTDICom.cpp  Fluke8842.cpp  HP3478A.cpp  Keithley2000.cpp  Keithley24XX.cpp  MojoCom.cpp  RigolDP832.cpp  SerialCom.cpp  SorensenPs.cpp  TTIMX180TPPs.cpp  TTITSX1820PPs.cpp  Tektronix654C.cpp
src/libGPIB/include/: AMAC.h  AgilentPs.h  Bk85xx.h  FTDICom.h  Fluke8842.h  GenericLoad.h  GenericPs.h  HP3478A.h  I2CCom.h  Keithley2000.h  Keithley24XX.h  MojoCom.h  RigolDP832.h  SorensenPs.h  TTILD400P.h  TTIMX180TPPs.h  TTITSX1820PPs.h  Tektronix654C.h
src/libGalil/: CMakeLists.txt
src/libGalil/include/: gclibo.h
src/libImageRec/: CMakeLists.txt  OpenCVHelper.cpp
src/libImageRec/include/: OpenCVHelper.h
src/libLoad/: CMakeLists.txt  TTILD400P.cpp
src/libMeter/: CMakeLists.txt  HP3478A.cpp  PM6680.cpp  PM6680.h
src/libPs/: CMakeLists.txt  Keithley24XX.cpp  RigolDP832.h  SorensenPs.cpp
src/libPs/include/: SorensenPs.h  TTITSX1820PPs.h
src/libScope/: CMakeLists.txt  PS6000.cpp  PicoScope.cpp  Tektronix654C.cpp
src/libScope/include/: PS6000.h  PicoScope.h
src/libUtils/: CMakeLists.txt
src/libUtils/include/: Logger.h
src/libWaferProb/: CMakeLists.txt  ControllerBase.cpp  ControllerGalil.cpp  ControllerGalil.h  ControllerZaber.cpp  ControllerZaber.h  Handler.cpp  MotionController.cpp  MotionController.h
src/libWaferProb/include/: ControllerBase.h  ControllerGalil.h  Handler.h  MotionController.h
src/libWaveFormGen/: CMakeLists.txt  PG8133A.cpp  PG8133A.h  WF33120A.cpp  WF33120A.h
src/libZaber/: CMakeLists.txt  za_serial.cpp
src/linpol/: CMakeLists.txt  EndeavourCom.cpp  EndeavourCom.h  EndeavourRaw.h  EndeavourRawFTDI.cpp  EndeavourRawUIO.cpp  EndeavourRawUIO.h  LinPOL12VTestTools.cpp  LinPOL12VTestTools.h  PBv3CommPatchSPICom.h  ftdihelp.h
src/linpol/tools/: CMakeLists.txt  LinPOL12V_2Load_test.cpp  LinPOL12V_basic_test.cpp  LinPOL12V_short_test.cpp  TTI_Load_test.cxx
src/pbv2/: CMakeLists.txt  PBv2TB.cpp  PBv2TB.h  PBv2Test.cpp  PBv2Test.h  keithley_test.cpp  measure_efficiency.cpp  pbv2_i2c.cpp  pbv2_monitor.cpp  pbv2_poweroff.cpp  pbv2_scope.cpp  pbv2_tester.cpp  pbv2dac.cpp  rigol_measure.cpp  test_tti.cpp
src/pbv2/singleboard/: .pbv2_tester.cpp.swp  CMakeLists.txt  longterm_noamac_test.cpp  pbv2_i2c.cpp  pbv2_monitor.cpp  pbv2_scope.cpp  pbv2_tester.cpp  test_agilent_bk85.cpp
src/pbv2/tools/: CMakeLists.txt  pbv2Calib.cpp  pbv2HVinput.cpp  pbv2HVread.cpp  pbv2HVsystest.cpp  pbv2HVtest.cpp  pbv2Icalibrate.cpp  pbv2SPItest1.cpp  pbv2TestI2C.cpp  pbv2Vcalibrate.cpp  pbv2activeOn.cpp  pbv2activeTester.cpp  pbv2adc.cpp  pbv2burnin.cpp  pbv2calibrate.cpp  pbv2dac.cpp  pbv2i2c.cpp  pbv2loadMonitor.cpp  pbv2massTester.cpp  pbv2powerOff.cpp
src/pbv2active/: CMakeLists.txt  PBv2TB.cpp  PBv2TB.h  pbv2active.cpp  pbv2adc.cpp  pbv2dac.cpp
src/pbv2active/tools/: CMakeLists.txt  pbv2i2c.cpp  pbv2monitor.cpp  pbv2togglelv.cpp
src/pbv3/: AMAC.cpp  AMAC.h  AMACreg.cpp  AMACreg.h  AMACv2.cpp  AMACv2.h  AMACv2Reg.cpp  AMACv2Reg.h  CMakeLists.txt  EndeavourCom.cpp  EndeavourCom.h  EndeavourComException.cpp  EndeavourComException.h  EndeavourRaw.cpp  EndeavourRaw.h  EndeavourRawFTDI.cpp  EndeavourRawFTDI.h  EndeavourRawUIO.cpp  EndeavourRawUIO.h  PBv3CommPatchSPICom.cpp  PBv3ConfigTools.cpp  PBv3ConfigTools.h  PBv3TestTools.cpp  PBv3TestTools.h  ftdihelp.cpp
src/pbv3/scripts/: run_long.sh
src/pbv3/tools/: CMakeLists.txt  EndeavourBER.cpp  endeavour.cpp  endeavour_looptest.cpp  endeavour_setid.cpp  pbv3_basic_test.cpp  pbv3_long_test.cpp  pbv3_powerOff.cpp  pbv3_setcal.cpp  pbv3_tune.cpp  plot_json.cpp  spi_test.cpp
src/prober/: CMakeLists.txt  agilent_test.cpp  eg_galil.cpp  eg_zaber.cpp  hp_test.cpp  keithley2000_test.cpp  power_off_wafer.cpp  power_on_wafer.cpp  test_sift.cpp
src/tools/: CMakeLists.txt  pbv2_tester.cpp  test_agilent_bk85.cpp  test_opencv_camera.cpp  test_sift.cpp
src/varload/: CMakeLists.txt  varload_test.cpp
